<resources>
    <string name="app_name">Income And Expense Tracker</string>
    <string name="search">Search</string>
    <string name="applogo">AppLogo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>

    <string name="generic_error">Oops! Something went wrong.</string>
    <string name="error_email_is_empty">Email must not be empty</string>
    <string name="error_invalid_format">Email is on invalid format</string>
    <string name="error_password_empty">Password must not be empty</string>

    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="error_email_password_incorrect">Email or password is incorrect</string>
    <string name="error_amount_invalid">*Amount Invalid</string>
    <string name="error_user_session_expired">User session expired. Logging Out</string>

    <string name="home">Home</string>
    <string name="sync">Sync</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense_type">Expense Type</string>
    <string name="food">Food</string>
    <string name="transportation">Transportation</string>
    <string name="others">Others</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="_0">$0</string>
    <string name="notes">Notes</string>
    <string name="add_notes">Add Notes</string>
    <string name="expense_added_successfully">Expense record added successfully</string>
    <string name="income_added_successfully">Income record added successfully</string>
    <string name="please_select_expense_type">* Please select expense type</string>
    <string name="add_income">Add Income</string>
    <string name="work">Work</string>
    <string name="income_source">Income Source</string>
    <string name="welcome">Welcome</string>
</resources>